# csc299-project

./: README.md  SUMMARY.md  video.txt
Final_Product/: README.md  project.db  pyproject.toml
Final_Product/Final_Product/: cli_ai.py  cli_notes.py  cli_tasks.py  database.py
Final_Product/tests/: test_tasks.py
Prototype_1/: README.md  project.db  pyproject.toml
Prototype_1/Prototype_1/: __init__.py  cli_tasks.py  database.py
Prototype_2/: README.md  project.db  pyproject.toml
Prototype_2/Prototype_2/: __init__.py  cli_notes.py
Prototype_2/tests/: test_tasks.py
Prototype_3/: README.md  project.db  pyproject.toml
Prototype_3/Prototype_3/: __init__.py  cli_ai.py  cli_tasks.py
tasks1/: README.md  tasks.json  tasks.py
tasks2/: README.md  tasks.py
tasks3/tasks3/: README.md  pyproject.toml  tasks.json
tasks3/tasks3/src/tasks3/: __init__.py
tasks3/tasks3/tests/: test_app.py
tasks4/: pyproject.toml
tasks4/tasks4/: __init__.py
tasks5/: README.md  cli_app.py  data.json
tasks5/.specify/memory/: constitution.md
