[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Prototype_2"
version = "0.1.0"
description = "A PKMS and Task Manager with AI agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai",
    "typer",
    "rich",
    "sqlmodel",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
pkms = "Prototype_2:main"